# grepMail

./: .env.example  .gitignore  README.md  handlers.txt  pyproject.toml
grepmail/: logger.py  main.py
grepmail/mindsdb/: main.py
grepmail/mindsdb/handlers/: base.py  common.py  email.py
grepmail/mindsdb/integrations/: base.py  email.py
